--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -488,7 +488,9 @@
    "id": "fbab6c74-8885-49af-82aa-6f41593a92d8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(1)"
+   ]
   }
  ],
  "metadata": {
